# MLOps_accidents

./: .dockerignore  .dvcignore  .env.example  .flake8  .gitignore  .gitkeep  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml  docker-publish.yml  lint.yaml  test.yaml
data/: model_config.yaml
data/metrics/: .gitignore  lightgbm_metrics.json  logistic_regression_metrics.json  model_comparison.csv  random_forest_metrics.json  training_metrics.json  xgboost_metrics.json
data/preprocessed/: .gitignore
deploy/k3s/: .gitignore  00-namespace.yaml  01-configmap.yaml  03-pvc.yaml  05-postgres.yaml  07-prometheus-configmap.yaml  07-prometheus.yaml  08-grafana-configmap.yaml  08-grafana.yaml  09-node-exporter.yaml  10-auth.yaml  10-dashboard.yaml  10-data.yaml  10-docs.yaml  10-geocode.yaml  10-predict.yaml  10-train.yaml  10-weather.yaml  20-nginx.yaml  25-hpa-predict.yaml  30-model-reload-job.yaml  35-test-job.yaml  36-sim-traffic-job.yaml  37-sim-eval-job.yaml  README.md
doc/: Plan_Microservices.md  Plan_Phase_01.md  Plan_Phase_02.md  Roadmap.md  api_testing.md  contributing.md  development_commands.md  feature_selection.md  go_live_checklist.md  local_development.md  mlflow_model_registry.md  multi_model_training.md  pipeline_overview.md  project_structure.md  team_structure.md  technology_stack.md  workflow.md
monitoring/grafana/dashboards/: API-dashboard.json  Model-dashboard.json  Resource-dashboard.json
monitoring/grafana/provisioning/alerting/: rules.yaml
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/prometheus/: prometheus.yml
notebooks/: 1.0-ldj-initial-data-exploration.ipynb
scripts/: manage_model_registry.py  setup_dvc_remote.sh
services/: Dockerfile.python  __init__.py  env.example
services/auth_service/: Dockerfile  __init__.py  main.py
services/auth_service/api/: __init__.py  routes.py
services/common/: __init__.py  auth.py  auth_limits.py  config.py  database.py  dependencies.py  job_runner.py  job_store.py  job_store_postgres.py  models.py
services/dashboard/: Dockerfile  requirements.txt
services/dashboard/.streamlit/: config.toml
services/dashboard/app/: auth.py  config.py  main.py
services/dashboard/app/components/: address_input.py  api_client.py  header.py  prediction_form.py  sidebar.py
services/dashboard/app/utils/: session.py
services/dashboard/app/views/: admin_data_ops.py  admin_ml_ops.py  admin_user_mgmt.py  forgot_password.py  login.py  user_prediction.py
services/dashboard/app/views/presentation/: __init__.py  architecture.py  conclusion.py  devops.py  frontend.py  introduction.py  ml_pipeline.py  monitoring.py
services/data_service/: Dockerfile  main.py
services/data_service/api/: routes.py  schemas.py
services/data_service/core/: features.py  preprocessing.py
services/docs_service/: __init__.py  aggregator.py  main.py
services/geocode_service/: __init__.py  main.py
services/geocode_service/api/: __init__.py  routes.py  schemas.py
services/geocode_service/core/: __init__.py  config.py  french_geo_api.py  geocoder.py
services/nginx/: Dockerfile  nginx.conf  nginx.test.conf
services/predict_service/: Dockerfile  main.py
services/predict_service/api/: routes.py  schemas.py
services/predict_service/core/: predictor.py  prom_metrics.py
services/sim_eval_service/: Dockerfile  main.py
services/sim_traffic_service/: main.py
services/test_service/: Dockerfile  __init__.py
services/train_service/: Dockerfile  main.py
services/train_service/api/: routes.py  schemas.py
services/train_service/core/: config_io.py  trainer.py
services/weather_service/: __init__.py  main.py
services/weather_service/api/: __init__.py  routes.py  schemas.py
services/weather_service/core/: __init__.py  weather.py
src/config/: model_config.yaml
src/data/: check_structure.py  data_schemas.py  import_raw_data.py  make_dataset.py
src/features/: build_features.py  preprocess.py  schema.py
src/models/: README_MULTI_MODEL.md  base_trainer.py  mlflow_utils.py  model_registry_enhanced.py  model_trainers.py  predict_model.py  test_features.json  train_model.py  train_multi_model.py
tests/: README.md  TEST_SERVICE.md  __init__.py  conftest.py  run_tests.sh  test_auth_service.py  test_data_service.py  test_predict_service.py  test_train_service.py
